[main] : transfer the data store to mongdb from lowdb
【提交描述】：
 使用mongdb数据库存储数据，替代原有的lowdb包

--- a/tallyBook/views/account.ejs
+++ b/tallyBook/views/account.ejs
@@ -84,7 +84,7 @@
                   <span class="mif-info1"></span>
                 </button>
 
-                <a href="/account/<%= item.id %>">
+                <a href="/account/<%= item._id %>">
                   <button
                     id="delete-button-<%= index %>"
                     onclick="deleteItem(this, '<%= JSON.stringify(item) %>')"
